Fixed some overlapping issues

--- a/styles/main.less
+++ b/styles/main.less
@@ -105,20 +105,25 @@ p{
     border: 1px solid white;
 }
 
-@media screen and (max-width: 991px){
+
+@media screen and (max-height: 790px) and (max-width: 991px){
     .container-cover{
-        background-size: 250px 250px;
+        background-size: 40%;
         background-position: top;
     }
 
     .navbar-nav{
         .center();
+        margin: 0;
     }
 
     .container-cover-text{
         font-size: .5em;
         .center();
         margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+        height: fit-content!important;
     }
 
     .card{
@@ -133,16 +138,14 @@ p{
     }
 }
 
-
-@media screen and (max-height: 730px){
+@media screen and (max-width: 991px){
     .container-cover{
-        background-size: 40%;
+        background-size: 250px 250px;
         background-position: top;
     }
 
     .navbar-nav{
         .center();
-        margin: 0;
     }
 
     .container-cover-text{
